@@ -3810,7 +3810,22 @@ Returns a function pointer to the TLS/SSL method set in $ssl.
 
 Check openssl doc L<http://www.openssl.org/docs/ssl/SSL_CTX_set_ssl_version.html|http://www.openssl.org/docs/ssl/SSL_CTX_set_ssl_version.html>
 
+=item * in_init, in_before, is_init_finished, in_connect_init, in_accept_init
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.85 and before.
+
+Retrieve information about the handshake state machine. All functions take $ssl as the only argument and return 0 or 1. These functions are recommended over get_state() and state().
+
+ my $rv = Net::SSLeay::is_init_finished($ssl);
+ # $ssl - value corresponding to openssl's SSL structure
+ #
+ # returns: All functions return 1 or 0
+
+Check openssl doc L<https://www.openssl.org/docs/ssl/SSL_in_init.html|http://www.openssl.org/docs/ssl/SSL_in_init.html>
+
 =item * get_state
+
+B<COMPATIBILITY:> OpenSSL 1.1.0 and later use different constants which are not made available. Use is_init_finished() and related functions instead.
 
 Returns the SSL connection state.
 
